laravel-echo-server-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: laravel-echo-server
  namespace: internal
  labels:
    app: laravel-echo-server
spec:
  replicas: 1
  revisionHistoryLimit: 10
  template:
    metadata:
        labels:
          app: laravel-echo-server
    spec:
      containers:
      - image: mintopia/laravel-echo-server
        name: laravel-echo-server
        ports:
        - protocol: TCP
          containerPort: 6001
      restartPolicy: Always
      nodeSelector:
        autonom8.com.node-restriction.kubernetes.io/instance-type: general
