webhook-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  #annotations:
  labels:
    app: webhook
  name: webhook
  namespace: internal
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webhook
    spec:
      containers:
      - args:
        - php
        - artisan
        - queue:work
        - --daemon
        - --tries=3
        - --timeout=10
        image: fredsted/webhook.site
        name: webhook
        ports:
        - containerPort: 80
      restartPolicy: Always
      nodeSelector:
        autonom8.com.node-restriction.kubernetes.io/instance-type: general
