services.yml
apiVersion: v1
kind: Service
metadata:
  name: webhook
  namespace: internal
spec:
  type: LoadBalancer
  ports:
  - name: "8084"
    port: 80
    targetPort: 80
  selector:
    app: webhook

---
apiVersion: v1
kind: Service
metadata:
  name: laravel-echo-server
  namespace: internal
spec:
  selector:
    app: laravel-echo-server
  ports:
  - port: 6001
    targetPort: 6001
